--- a/src/CraftUI.Demo.Infrastructure/CraftUI.Demo.Infrastructure.csproj
+++ b/src/CraftUI.Demo.Infrastructure/CraftUI.Demo.Infrastructure.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\StephanArnas.Controls.Application\StephanArnas.Controls.Application.csproj" />
+      <ProjectReference Include="..\CraftUI.Demo.Application\CraftUI.Demo.Application.csproj" />
     </ItemGroup>
 
     <ItemGroup>
