--- a/src/CraftUI.Demo/CraftUI.Demo.csproj
+++ b/src/CraftUI.Demo/CraftUI.Demo.csproj
@@ -86,6 +86,9 @@
       <MauiXaml Update="Presentation\Pages\UseCases\UseCasesList.xaml">
         <SubType>Designer</SubType>
       </MauiXaml>
+      <MauiXaml Update="Presentation\Pages\Controls\Pickers\MultiPickerPopupPage.xaml">
+        <SubType>Designer</SubType>
+      </MauiXaml>
     </ItemGroup>
 
     <ItemGroup>
@@ -113,6 +116,10 @@
         <DependentUpon>UseCasesList.xaml</DependentUpon>
         <SubType>Code</SubType>
       </Compile>
+      <Compile Update="Presentation\Pages\Controls\Pickers\MultiPickerPopupPage.xaml.cs">
+        <DependentUpon>MultiPickerPopupPage.xaml</DependentUpon>
+        <SubType>Code</SubType>
+      </Compile>
     </ItemGroup>
 
     <ItemGroup>
@@ -127,6 +134,10 @@
       <AdditionalFiles Include="Presentation\Pages\Controls\Entries\EntryPage.xaml" />
       <AdditionalFiles Include="Presentation\Pages\Controls\Pickers\PickerPage.xaml" />
       <AdditionalFiles Include="Presentation\Pages\Controls\Pickers\PickerPopupPage.xaml" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Presentation\Pages\Controls\MultiPickers\" />
     </ItemGroup>
 
 </Project>
