feat: updates application identifier
Updates the application identifier to align with the project's naming convention.

--- a/src/CraftUI.Demo/CraftUI.Demo.csproj
+++ b/src/CraftUI.Demo/CraftUI.Demo.csproj
@@ -23,7 +23,7 @@
         <ApplicationTitle>CraftUI Demo</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.stephanarnas.blog_maui_components</ApplicationId>
+        <ApplicationId>com.stephanarnas.craftui</ApplicationId>
 
         <!-- Versions -->
         <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
